--- a/css/architects.main.css
+++ b/css/architects.main.css
@@ -3,17 +3,22 @@
     src: url(../../static/fonts/Alex.ttf);
 }
 body {font-family: Alex;color: #fff;background: #2B2B2B; position: relative;}
+html{scroll-behavior: smooth;}
 
 /* start of global */
 ul{list-style: none;padding-inline-start: 0;}
 /* end of global */
 
-header{background-image: url("../img/header.jpg");background-size: cover; }
+header{background-image: url("../img/header.jpg");background-size: cover;}
+header .overlay{background: rgba(0, 0, 0, .2);}
 
 /* start of navbar */
 
 .navbar-brand{color: #fff;font-size: 25px; margin-top: 5px;}
-.navbar-brand span{background: transparent; color: rgb(114, 37, 37); border: 1px solid rgb(114, 37, 37); padding: 7px;}
+.navbar-brand span{background: transparent; color: #873C12; border: 1px solid #873C12; padding: 7px;}
+@media (max-width: 294px){
+    .navbar-brand span{display: none;}
+}
 .navbar-brand:hover{color: #fff;}
 .navbar-brand img{width: 30px;}
 @media (max-width: 238px){
@@ -94,13 +99,14 @@ header{background-image: url("../img/header.jpg");background-size: cover; }
 /* start of header intro */
 .hero{width: 100%;}
 .hero .intro{padding: 50px 0; width: 70%;}
-.hero .intro h1{margin-top: 230px;margin-bottom: 10px;color: rgb(114, 37, 37);}
+.hero .intro h1{margin-top: 230px;margin-bottom: 10px;color: #873C12;}
 .hero .intro h5{margin-bottom: 20px; color: #fff; width: 70%;}
 @media(max-width: 992px){
     .hero .intro{width: 100%;}
     .hero .intro h5{width: 100%;}
 }
-.hero .intro button{border: 1px solid rgb(114, 37, 37); padding: 7px; background-color: rgb(114, 37, 37); color: #fff; width: 100px;}
+.hero .intro button{border: 1px solid #873C12; padding: 7px; background-color: #873C12; color: #fff; width: 100px;}
+.hero .intro button a{color: #fff;}
 /* end of header */
 
 /* start of projects section */
@@ -125,6 +131,7 @@ header{background-image: url("../img/header.jpg");background-size: cover; }
 @media(max-width: 992px){
     .about-us .desc{width: 100%;}
 }
+.about-us .desc p:nth-child(1){margin-bottom: 10px;}
 .about-us h3{margin-bottom: 40px}
 .about-us h3 span{text-decoration: underline;color: #873C12;}
 /* end of about us section */
